# GenGNN_KDD

./: .gitignore  LICENSE  README.md  gen.yml  ggnn.yml
configs/: config.yaml
configs/experiment/: gcn_comm20.yaml  gcn_comm20_digress.yaml  gcn_planar.yaml  gcn_planar_digress.yaml  gcn_qm9.yaml  gcn_qm9_digress.yaml  gcn_sbm.yaml  gcn_sbm_digress.yaml  gcn_tree.yaml  gcn_tree_digress.yaml  gcn_zinc.yaml  gcn_zinc_digress.yaml  gin_comm20.yaml  gin_comm20_digress.yaml  gin_planar.yaml  gin_planar_digress.yaml  gin_qm9.yaml  gin_qm9_digress.yaml  gin_sbm.yaml  gin_sbm_digress.yaml  gin_tree.yaml  gin_tree_digress.yaml  gin_zinc.yaml  gin_zinc_digress.yaml  gnn_comm20.yaml  gnn_comm20_digress.yaml  gnn_guacamol.yaml  gnn_moses.yaml  gnn_planar.yaml  gnn_planar_digress.yaml  gnn_qm9.yaml  gnn_qm9_digress.yaml  gnn_sbm.yaml  gnn_sbm_digress.yaml  gnn_tree.yaml  gnn_tree_digress.yaml  gnn_zinc.yaml  gnn_zinc_digress.yaml  gt_comm20.yaml  gt_comm20_digress.yaml  (+30 more)
configs/general/: general_default.yaml
configs/model/: discrete.yaml
configs/train/: train_default.yaml
magnipy/: .gitignore  LICENSE  README.md  pyproject.toml
magnipy/magnipy/: __init__.py  diversipy.py  magnipy.py
magnipy/magnipy/magnitude/: approximation.py  compute.py  convergence.py  dimension.py  distances.py  function_operations.py  scales.py  weights.py
magnipy/magnipy/utils/: datasets.py  plots.py  tutorial_data.py
magnipy/tests/: test_complete_graph.py  test_graphs.py  test_mag.py
src/: discrete_diffusion_model.py  graph_discrete_flow_model.py  main.py  utils.py
src/models/: gnn_model.py  (+4 more)
(+15 files in other folders)
