[tool.poetry]
name = "magnipy"
version = ""
description = "A framework for computing the magnitude of a metric space."
authors = ["anonymous"]
repository="anonymous"
keywords = ["metric space magnitude"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "==1.13.0"
krypy = "^2.2.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"
numba = "^0.59.1"
numexpr = "^2.10.1"
seaborn = "^0.13.2"
black = "==24.10.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:scipy.sparse.sputils"
]

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
magnipy = "magnipy.magnipy:Magnipy"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
